# demo-django

./: .gitignore  README.md  app.json  env.example  pyproject.toml
config/: wsgi.py
config/settings/: common.py  local.py  production.py  staging.py
core/: views.py
core/templates/: home.jinja
core/templates/layouts/: base.jinja
demo/: settings.py  urls.py
