[tool.poetry]
name = "demo-django"
version = "1.0.0"
description = "A Django demo"
authors = ["Tyler Gaw <tyler@ideas42ventures.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
