[tool.poetry]
name = "demo-django"
version = "1.0.0"
description = "A Django demo"
authors = ["Tyler Gaw <tyler@ideas42ventures.com>"]

[tool.poetry.dependencies]
python = "3.9.1"
Django = "3.1.5"
gunicorn = "^20.0.4"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
